[package]
name = "chapter-6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.4"
serde = "1.0.0"
cw-storage-plus = "0.13.4"

[dev-dependencies]
cw-multi-test = "0.15.0"